# puzzles

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: pr_check.yml
src/: 2048.c  tileset.c
src/core/: 2048_core.c  2048_core.h  game_2048.c  game_2048.h  game_tileset.c  game_tileset.h  logging.c  logging.h  nc-utils.c  nc-utils.h  test.c  test.h  trie.c  trie.h  tui.c  tui.h
src/tests/: test_2048.c  test_tileset.c  test_trie.c  testing.h
src/wordlists/: en-gb.h
tests/: CMakeLists.txt  test_2048.c  test_test.c  test_tileset.c  testing.h
